[package]
name = "convfmt"
version = "0.1.9"
edition = "2021"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
description = "cli tool which can convert different formats"
homepage = "https://github.com/oriontvv/convfmt/"
repository = "https://github.com/oriontvv/convfmt/"
documentation = "https://docs.rs/convfmt"
keywords = ["cli", "format", "convert", "convertor", "tool"]
categories = ["command-line-utilities", "command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
bson = "2.15.0"
clap = { version = "4.5.39", features = ["derive"] }
hocon = { version = "0.9.0", features = ["serde-support"] }
json5 = "0.4.1"
quick-xml = "0.37.5"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
toml = "0.8.22"

[dev-dependencies]
rstest = "0.25.0"
 
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-linux-musl{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-win{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-mac{ archive-suffix }"
