[package]
name = "convfmt"
version = "1.2.1"
edition = "2024"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
description = "cli tool which can convert different formats"
homepage = "https://github.com/oriontvv/convfmt/"
repository = "https://github.com/oriontvv/convfmt/"
documentation = "https://docs.rs/convfmt"
keywords = ["cli", "format", "convert", "json", "toml"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bson = { version = "3.1.0", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
hjson = "1.1.0"
hocon = { version = "0.9.0", features = ["serde-support"] }
json5 = "0.4.1"
linked-hash-map = "0.5.6"
quick-xml = "0.38.3"
ron = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
serde-hjson = "1.1.0"
toml = "0.9.8"

[dev-dependencies]
rstest = "0.26.1"
 
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-linux-musl{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-win{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-mac{ archive-suffix }"
