[package]
name = "convfmt"
version = "2.1.1"
edition = "2024"
license = "Apache-2.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
description = "cli tool which can convert different formats"
homepage = "https://github.com/oriontvv/convfmt/"
repository = "https://github.com/oriontvv/convfmt/"
documentation = "https://docs.rs/convfmt"
keywords = ["cli", "format", "convert", "json", "toml"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["hocon"]
hocon = ["dep:hocon_"]

[dependencies]
anyhow = "1.0.102"
bson = { version = "3.1.0", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
csv = "1.4.0"
hjson = "1.1.0"
hocon_ = { version = "0.10.4", features = ["serde-support"], optional = true }
json5 = "1.3.1"
linked-hash-map = "0.5.6"
plist = "1.9.0"
quick-xml = "0.40.1"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
serde-hjson = "1.1.0"
toml = "1.1.2"
toon-format = { version = "0.5.0", default-features = false }

[dev-dependencies]
rstest = "0.26.1"
 
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-linux-musl{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-win{ archive-suffix }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-mac{ archive-suffix }"
